Removing some of the useless ATS